# tafarn

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.sh  i18n.toml
i18n/cy/: tafarn.ftl
i18n/en-GB/: tafarn.ftl
i18n/nl-NL/: tafarn.ftl
i18n/ru-RU/: tafarn.ftl
kube/: apply.sh  config.yaml  deploy.yaml  ingress.yaml  net.yaml  nginx.yaml  pvc.yaml  svc.yaml
migrations/2022-11-01-230545_sessions/: down.sql  up.sql
migrations/2022-11-02-090527_apps/: down.sql  up.sql
migrations/2022-11-02-105841_oauth_consents/: down.sql  up.sql
migrations/2022-11-02-142118_oauth_tokens/: down.sql  up.sql
migrations/2022-11-02-162440_accounts/: down.sql  up.sql
migrations/2022-11-03-110414_web_push/: down.sql  up.sql
migrations/2022-11-04-124154_public_key/: up.sql
migrations/2022-12-26-132253_relationships/: down.sql  up.sql
migrations/2022-12-26-224527_web_push_update/: down.sql  up.sql
migrations/2022-12-26-231644_notifications/: up.sql
migrations/2022-12-27-012154_group_account/: down.sql  up.sql
migrations/2022-12-29-140619_account_images/: down.sql  up.sql
migrations/2023-01-01-144406_pagination/: down.sql  up.sql
migrations/2023-01-03-184435_pending_follow/: down.sql  up.sql
migrations/2023-01-04-123932_media/: down.sql  up.sql
migrations/2023-01-07-235744_web_push_policy/: down.sql  up.sql
migrations/2023-01-08-021756_status/: down.sql  up.sql
migrations/2023-01-08-143528_timelines/: down.sql  up.sql
src/: csrf.rs  i18n.rs  lib.rs  models.rs  schema.rs
src/tasks/: accounts.rs  collection.rs  (+6 more)
templates/: base.html.tera  host-meta.tera  oauth-consent.html.tera  oauth-error.html.tera
(+37 files in other folders)
